<resources>

    <!--SharedPreference-->
    <string name="app_name">500年</string>
    <string name="is_first_use">IsFirstUse</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="user_id">UserId</string>


    <!--数据传递-->
    <string name="collection_id">CollectionId</string>
    <string name="create_collection">CreateCollection</string>
    <string name="collection_image_url">CollectionImageUrl</string>
    <string name="collection_dynasty">CollectionDynasty</string>
    <string name="collection_length">CollectionLength</string>
    <string name="collection_width">CollectionWidth</string>
    <string name="collection_height">CollectionHeight</string>
    <string name="collection_weight">CollectionWeight</string>
    <string name="collection_record">CollectionRecord</string>
    <string name="collection_story">CollectionStory</string>

    <!--JSON-->
    <string name="json_result">result</string>
    <string name="json_error">error</string>
    <string name="json_sou_type_list">souTypeList</string>
    <string name="json_true">true</string>
    <string name="json_false">false</string>
    <string name="json_id">id</string>
    <string name="json_type_name">typename</string>
    <string name="json_type_count">typecount</string>
    <string name="json_dynasty_code">dynastycode</string>
    <string name="json_dynasty_name">dynastyname</string>
    <string name="json_main_image_url">mainImageURL</string>
    <string name="json_sou_base_info">soubaseinfo</string>
    <string name="json_length">lengths</string>
    <string name="json_width">wides</string>
    <string name="json_height">highs</string>
    <string name="json_weight">weights</string>
    <string name="json_user_id">userid</string>
    <string name="json_sou_venir_type_id">souvenirtypeid</string>
    <string name="json_record">userrecords</string>
    <string name="json_sou_images_list">souImagesList</string>
    <string name="json_user_records">userrecords</string>


    <string name="response_error">服务器异常</string>
    <string name="response_format">返回码:%1$d,错误%2$s</string>

    <string name="to_be_continued">敬请期待</string>

    <!--欢迎界面-->
    <string name="welcome_to_sign_in">注册/登录</string>

    <!--网络配置-->
    <string name="net_server_url">服务器地址：</string>
    <string name="net_accept">确定</string>
    <string name="net_cancel">取消</string>

    <!--主界面-->
    <string name="main_title">500年，您的私人云藏馆</string>
    <string name="main_button_learn">学习和鉴赏</string>
    <string name="main_button_mine">云藏馆</string>
    <string name="main_button_me">个人资料</string>
    <string name="main_button_server">服务</string>
    <string name="main_button_show">晒宝广场</string>
    <string name="main_back_press_warning">再按一次退出</string>

    <!--我的藏品-->
    <string name="mine_title">500年，记录着你的印记</string>
    <string name="mine_button_add_type">新增类别</string>
    <string name="mine_button_add_goods">新增藏品</string>
    <string name="mine_loading">更新中</string>
    <string name="mine_load_done">更新成功</string>
    <string name="mine_load_error">更新失败</string>
    <string name="dialog_add_type_title">藏品类型</string>
    <string name="add_type_accept">确定</string>
    <string name="add_type_cancel">取消</string>

    <!--物品详情-->
    <string name="detail_title">云藏馆</string>
    <string name="detail_item_detail_length">长/口径:</string>
    <string name="detail_item_detail_width">宽/足径:</string>
    <string name="detail_item_detail_height">高:</string>
    <string name="detail_item_detail_weight">重量:</string>
    <string name="detail_item_detail_dynasty">年代:</string>
    <string name="detail_item_record">藏品描述</string>
    <string name="detail_item_story">心得体会</string>
    <string name="detail_item_info_loading">加载中&#8230;</string>
    <string name="detail_item_detail_cm">cm</string>
    <string name="detail_item_detail_g">g</string>

    <!--图片详细-->
    <string name="image_detail_title">图片详情</string>
    <string name="image_detail_done_text">拍照</string>

    <!--物品修改界面-->
    <string name="modify_title">修改物品信息</string>
    <string name="modify_title_done_text">确定</string>

    <!--登录界面-->
    <string name="sign_in_button_text">登录</string>
    <string name="sign_in_text_view_sign_up_text">注册</string>
    <string name="sign_in_text_view_forget_password_text">忘记密码?</string>
    <string name="sign_in_edit_text_account_hint_text">手机号码</string>
    <string name="sign_in_edit_text_password_hint_text">密码</string>
    <string name="sign_in_account_is_empty">手机号不能为空</string>
    <string name="sign_in_account_not_match">手机号格式不正确</string>
    <string name="sign_in_password_is_empty">密码不能为空</string>
    <string name="sign_in_password_not_match">密码格式不正确</string>
    <string name="sign_in_loading">登录中&#8230;</string>

    <!--注册界面-->
    <string name="sign_up_title">注册</string>
    <string name="sign_up_edit_text_account_hint_text">手机号码</string>
    <string name="sign_up_edit_text_password_hint_text">密码</string>
    <string name="sign_up_loading">注册中&#8230;</string>
    <string name="sign_up_success">注册成功</string>
    <string name="sign_up_fail">注册失败</string>

    <!--个人资料-->
    <string name="me_account_info">账户信息</string>
    <string name="me_modify_password">修改密码</string>

    <!--账户信息-->
    <string name="account_info_user_name">姓名:</string>
    <string name="account_info_nick_name">昵称:</string>
    <string name="account_info_cellphone">手机号:</string>
    <string name="account_info_email">邮箱:</string>
    <string name="account_info_id_card">身份证:</string>
    <string name="account_info_we_chat">微信号:</string>
    <string name="account_info_sign_in">注册时间</string>

    <!--修改密码-->
    <string name="modify_password_old_password">原密码:</string>
    <string name="modify_password_new_password">新密码:</string>
    <string name="modify_password_confirm_password">确认密码:</string>
</resources>
