<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_sign_in_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:background="@mipmap/bg"
    android:focusableInTouchMode="true">


    <EditText
        android:id="@+id/et_sign_in_account"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_control_height"
        android:layout_centerInParent="true"
        android:hint="@string/sign_in_edit_text_account_hint_text"
        android:inputType="phone"
        android:maxLength="11"
        android:text="18682278869"
        android:textSize="20sp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:background="@null"
        android:longClickable="false"
        android:imeOptions="flagNoExtractUi"
        android:singleLine="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/et_sign_in_account"
        android:background="@color/line_grey_3" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/et_sign_in_account"
        android:background="@color/line_grey_3"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <EditText
        android:id="@+id/et_sign_in_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_control_height"
        android:layout_below="@id/et_sign_in_account"
        android:hint="@string/sign_in_edit_text_password_hint_text"
        android:inputType="textPassword"
        android:longClickable="false"
        android:imeOptions="flagNoExtractUi"
        android:maxLength="30"
        android:textSize="20sp"
        android:text="278869"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:background="@null"
        android:singleLine="true" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/et_sign_in_password"
        android:background="@color/line_grey_3" />

    <Button
        android:id="@+id/btn_sign_in_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_sign_in_password"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/white"
        android:background="@drawable/button_common_style"
        android:text="@string/sign_in_button_text"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_sign_in_sign_in"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin">

        <Button
            android:id="@+id/btn_sign_in_sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in_text_view_sign_up_text"
            android:textColor="@color/white"
            android:background="@drawable/button_common_style"
            android:layout_marginRight="@dimen/activity_min_margin"
            android:textSize="20sp"/>

        <Button
            android:layout_marginLeft="@dimen/activity_min_margin"
            android:id="@+id/btn_sign_in_forget_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sign_in_text_view_forget_password_text"
            android:textColor="@color/white"
            android:background="@drawable/button_common_style"
            android:textSize="20sp" />
    </LinearLayout>


</RelativeLayout>
